--- a/docs/source/Luis_Em_Alvares/p1.tex
+++ b/docs/source/Luis_Em_Alvares/p1.tex
@@ -59,8 +59,16 @@ Calcular una razón, significa determinar el valor de ésta, el que se establece
 
 entre el antecedente y el consecuente.
 
+\hfill
+
 Ejemplos:
 
+\hfill
+
+\begin{enumerate}
+\item $\frac{1}{2} \to $ 1:2= 0.5 
+\item $\frac{100}{50} \to $ 100:50 = 2
+\end{enumerate}
 
 \end{frame}
 
@@ -68,11 +76,73 @@ Ejemplos:
 \begin{frame}
     \frametitle{RAZÖN}
 
+Resuelva de acuerdo con lo solicitado en cada caso.
+
+\begin{enumerate}
+\item 7 y 5
+\item 20 y 80
+\item Antecedente 200 y consecuente 300
+\item Antecedente 5 y consecuente 3
+\end{enumerate}
 
 \end{frame}
 
 \begin{frame}
-    \frametitle{RAZÖN}
+    \frametitle{Proporciones}
+
+¿QUÉ ES UNA PROPORCIÓN?
+
+\hfill
+
+Una proporción es la igualdad entre dos o más
+razones. Se escribe:
+
+$$
+\frac{a}{b} = \frac{c}{d}=k o a:b = c:d = k, con b,d \neq 0
+$$
+
+Se lee: « a es a b como c es a d »
+
+k: Constante de proporcionalidad
+
+a, d : Se denominan extremos de la proporción.
+
+b, c : Se denominan medios de la proporción.
+
+\hfill
+
+Ejemplos:
+
+\begin{enumerate}
+\item $\frac{7}{3} = \frac{14}{6}= 2.3$
+\item $\frac{10}{50} = \frac{5}{25} = \frac{15}{75} = \frac{1}{5} = 0.2 
+\end{enumerate}
+
+TEOREMA FUNDAMENTAL DE LAS PROPORCIONES (TFP)
+
+El Teorema Fundamental de las Proporciones
+dice que: En una proporción, el producto de los
+extremos es igual al producto de los medios:
+
+$$
+\frac{a}{b} = \frac{c}{d} \to a*d = b*c, con b,d \neq 0
+$$
+
+Recíprocamente: Dos productos iguales pueden
+escribirse como una proporción:
+
+$$
+a*d = b*c \to \frac{a}{b} = \frac{c}{d}, con b,d \neq 0
+$$
+
+
+\hfill
+
+Ejemplos
+
+\begin{enumerate}
+\item $\frac{3}{4}= \frac{9}{12} \to 3*12 = 4*9
+\end{enumerate}
 
 
 \end{frame}
