--- a/docs/source/Luis_Em_Alvares/EJERCICIOS_RESUELTOS_DE_RAZONES.tex
+++ b/docs/source/Luis_Em_Alvares/EJERCICIOS_RESUELTOS_DE_RAZONES.tex
@@ -9,46 +9,46 @@ total en el curso?
 \hfill
 
 {\small
-Respuesta:
+Respuesta: Hay 40 estudiantes en el curso, 24 hombres y 16 mujeres.
 }
 
-\hfill
-
-Hay 40 estudiantes en el curso, 24 hombres y 16 mujeres.
-
-
-\item Un gásfiter y su ayudante, reciben por la instalación de tres sanitarios $ 270.000, los que se reparten en la razón 7 : 
+\item Un gásfiter y su ayudante, reciben por la instalación de tres sanitarios \$ 270.000, los que se reparten en la razón 7 : 
 2, 
 ¿cuánto dinero recibirá cada uno?
 
 \hfill
 
-Respuesta:
+{\small
+Respuesta: Pago al ayudante: \$ 60.000  Pago del gásfiter: \$ 210.000
+}
+\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{EJERCICIOS RESUELTOS DE RAZONES}
+
+
+\begin{enumerate}
+
+\item El perímetro de una cancha de fútbol mide 432 metros. Si la razón entre el ancho y el 
+largo es 5:7. ¿cuánto mide cada lado de la cancha?
 
 \hfill
 
-Pago al ayudante: $ 60.000  Pago del gásfiter: $ 210.000
-
-\item El perímetro de una cancha de fútbol mide 432 metros. Si la razón entre el ancho y el largo es 5 : 7, ¿cuánto mide cada 
-lado de la cancha?
-
-\hfill
-
-Respuesta:
-
-\hfill
-El ancho de la cancha es de 90 metros y el largo 126 metros.
+{\small
+Respuesta: El ancho de la cancha es de 90 metros y el largo 126 metros.
+}
 
 \item Las medidas de los ángulos interiores de un triángulo están en la razón 4 : 15 : 17 ¿Cuánto mide cada uno de los 
 ángulos?
 
+\includegraphics[scale=.3]{rectan}
 \hfill
 
-Respuesta:
-
-\hfill
-
-La medida de los ángulos interiores es α= 20º, β = 75º, γ= 85º
+{\small
+Respuesta: La medida de los ángulos interiores es $\alpha= 20^o, \beta = 75^o, \gamma= 85^o$
+}
 
 \end{enumerate}
 
