--- a/docs/source/Luis_Em_Alvares/dox.tex
+++ b/docs/source/Luis_Em_Alvares/dox.tex
@@ -21,6 +21,8 @@ L. González-Santos$^{1}$}
 
 \begin{document}
 
-\input{EJERCICIOS_RESUELTOS_DE_RAZONES}
+\input{introd_razones_proporciones}
+
+%\input{EJERCICIOS_RESUELTOS_DE_RAZONES}
 
 \end{document}
