--- a/docs/source/Luis_Em_Alvares/introd_razones_proporciones.tex
+++ b/docs/source/Luis_Em_Alvares/introd_razones_proporciones.tex
@@ -1,28 +1,3 @@
-\documentclass{beamer}
-\usepackage[spanish]{babel}
-\usepackage[utf8]{inputenc}
-\usetheme{Warsaw}
-\usecolortheme{crane}
-\useoutertheme{shadow}
-\useinnertheme{rectangles}
-
-\title[santosg572@gmail.com]{RAZONES Y PROPORCIONES}
-%\subtitle{Dando nombres a los animales}
-\author[L. González-Santos]{
-L. González-Santos$^{1}$}
-\institute[EDEN \& HELL]{
-  $^{1}$
-  Instituto de Neurobiología, UNAM\\
-  Campus Juriquilla, Qro.
-  \and
-  \texttt{$^{1}$lgs@unam.mx}
-}
-\date{\today}
-
-\begin{document}
-
-\frame{\titlepage}
-
 \begin{frame}
     \frametitle{RAZÖN}
 
@@ -43,11 +18,11 @@ $$
 \frac{6}{5} \text{ o } 6:5 \text{y se le 'seis es a cinco' }
 $$
 
-'a' - El numerador recibe el nombre de \textbf{antecedente}
+{\color{red} 'a'} - El numerador recibe el nombre de {\color{red} \textbf{antecedente}}
 
 \hfill
 
-'b' - El denominador recibe el nombre de \textbf{consecuente}
+{\color{red} 'b'} - El denominador recibe el nombre de {\color{red} \textbf{consecuente}}
 
 \end{frame}
 
@@ -56,12 +31,11 @@ $$
     \frametitle{¿CÓMO CALCULAMOS UNA RAZÓN?}
 
 Calcular una razón, significa determinar el valor de ésta, el que se establece haciendo la división
-
 entre el antecedente y el consecuente.
 
 \hfill
 
-Ejemplos:
+\textbf{Ejemplos:}
 
 \hfill
 
@@ -90,7 +64,7 @@ Resuelva de acuerdo con lo solicitado en cada caso.
 \begin{frame}
     \frametitle{Proporciones}
 
-¿QUÉ ES UNA PROPORCIÓN?
+\textbf{¿QUÉ ES UNA PROPORCIÓN?}
 
 \hfill
 
@@ -98,26 +72,28 @@ Una proporción es la igualdad entre dos o más
 razones. Se escribe:
 
 $$
-\frac{a}{b} = \frac{c}{d}=k o a:b = c:d = k, con b,d \neq 0
+\frac{a}{b} = \frac{c}{d}=k \text{ o } a:b = c:d = k, \text{ con } b,d \neq 0
 $$
 
-Se lee: « a es a b como c es a d »
+Se lee: {\color{red} "a es a b como c es a d "}
 
-k: Constante de proporcionalidad
+{\color{red} k} : constante de proporcionalidad
 
-a, d : Se denominan extremos de la proporción.
+{\color{red} a, d} : Se denominan extremos de la proporción.
 
-b, c : Se denominan medios de la proporción.
+{\color{red} b, c} : Se denominan medios de la proporción.
 
 \hfill
 
-Ejemplos:
+\textbf{Ejemplos:}
 
 \begin{enumerate}
 \item $\frac{7}{3} = \frac{14}{6}= 2.3$
-\item $\frac{10}{50} = \frac{5}{25} = \frac{15}{75} = \frac{1}{5} = 0.2 
+\item $\frac{10}{50} = \frac{5}{25} = \frac{15}{75} = \frac{1}{5} = 0.2 $
 \end{enumerate}
+\end{frame}
 
+\begin{frame}
 TEOREMA FUNDAMENTAL DE LAS PROPORCIONES (TFP)
 
 El Teorema Fundamental de las Proporciones
@@ -146,47 +122,5 @@ Ejemplos
 
 
 \end{frame}
-
-\begin{frame}
-    \frametitle{RAZÖN}
-
-
-\end{frame}
-
-\begin{frame}
-    \frametitle{RAZÖN}
-
-
-\end{frame}
-
-\begin{frame}
-    \frametitle{RAZÖN}
-
-
-\end{frame}
-
-\begin{frame}
-    \frametitle{RAZÖN}
-
-
-\end{frame}
-
-\begin{frame}
-    \frametitle{RAZÖN}
-
-
-\end{frame}
-
-\begin{frame}
-    \frametitle{RAZÖN}
-
-
-\end{frame}
-
-
-
-
-
-\end{document}
 
 
