--- a/docs/source/Luis_Em_Alvares/dox.tex
+++ b/docs/source/Luis_Em_Alvares/dox.tex
@@ -23,6 +23,6 @@ L. González-Santos$^{1}$}
 
 \input{introd_razones_proporciones}
 
-%\input{EJERCICIOS_RESUELTOS_DE_RAZONES}
+\input{EJERCICIOS_RESUELTOS_DE_RAZONES}
 
 \end{document}
