--- a/docs/source/Luis_Em_Alvares/introd_razones_proporciones.tex
+++ b/docs/source/Luis_Em_Alvares/introd_razones_proporciones.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-    \frametitle{RAZÖN}
+    \frametitle{RAZÓN}
 
 En matemáticas una razón es la comparación de dos cantidades, por medio de división o cociente. 
 
@@ -9,13 +9,13 @@ La razón entre $a$ y $b$, cuando $b$ es un número distinto de
 cero, se escribe:
 
 $$
-\frac{a}{b} \text{   o } a:b \text{ y se lee 'a es a b '}
+\frac{a}{b} \hspace{2mm} \text{ ó } \hspace{2mm} a:b \hspace{2mm} \text{ y se lee:} \hspace{2mm}  \text{{\color{red} a es a b }}
 $$
 
 Por ejemplo, la razón entre 6 y 5 se escribe:
 
 $$
-\frac{6}{5} \text{ o } 6:5 \text{y se le 'seis es a cinco' }
+\frac{6}{5} \hspace{2mm}  \text{ ó } \hspace{2mm} 6:5 \hspace{2mm}  \text{y se le 'seis es a cinco' }
 $$
 
 {\color{red} 'a'} - El numerador recibe el nombre de {\color{red} \textbf{antecedente}}
@@ -48,9 +48,9 @@ entre el antecedente y el consecuente.
 
 
 \begin{frame}
-    \frametitle{RAZÖN}
+    \frametitle{RAZÓN}
 
-Resuelva de acuerdo con lo solicitado en cada caso.
+Escriba las rázones de acuerdo a cada uno de los siguientes ejercicioss:
 
 \begin{enumerate}
 \item 7 y 5
@@ -72,10 +72,10 @@ Una proporción es la igualdad entre dos o más
 razones. Se escribe:
 
 $$
-\frac{a}{b} = \frac{c}{d}=k \text{ o } a:b = c:d = k, \text{ con } b,d \neq 0
+\frac{a}{b} = \frac{c}{d}=k \hspace{2mm}  \text{ ó } \hspace{2mm} a:b = c:d = k, \text{ con } b,d \neq 0
 $$
 
-Se lee: {\color{red} "a es a b como c es a d "}
+Se lee: {\color{red} a es a b como c es a d }
 
 {\color{red} k} : constante de proporcionalidad
 
@@ -94,21 +94,24 @@ Se lee: {\color{red} "a es a b como c es a d "}
 \end{frame}
 
 \begin{frame}
-TEOREMA FUNDAMENTAL DE LAS PROPORCIONES (TFP)
+
+\textbf{TEOREMA FUNDAMENTAL DE LAS PROPORCIONES (TFP)}
+
+\hfill
 
 El Teorema Fundamental de las Proporciones
 dice que: En una proporción, el producto de los
 extremos es igual al producto de los medios:
 
 $$
-\frac{a}{b} = \frac{c}{d} \to a*d = b*c, con b,d \neq 0
+\frac{a}{b} = \frac{c}{d} \to a*d = b*c, \hspace{2mm} \text{ con } b,d \neq 0
 $$
 
 Recíprocamente: Dos productos iguales pueden
 escribirse como una proporción:
 
 $$
-a*d = b*c \to \frac{a}{b} = \frac{c}{d}, con b,d \neq 0
+a*d = b*c \to \frac{a}{b} = \frac{c}{d}, \hspace{2mm} \text{  con }  b,d \neq 0
 $$
 
 
