--- a/docs/source/Luis_Em_Alvares/doc.tex
+++ b/docs/source/Luis_Em_Alvares/doc.tex
@@ -21,8 +21,6 @@ L. González-Santos$^{1}$}
 
 \begin{document}
 
-\input{introd_razones_proporciones}
-
-\input{EJERCICIOS_RESUELTOS_DE_RAZONES}
+\input{trian}
 
 \end{document}
